--- a/argo-projects/kube-ray/charts/kuberay-operator/Chart.yaml
+++ b/argo-projects/kube-ray/charts/kuberay-operator/Chart.yaml
@@ -1,6 +1,24 @@
 apiVersion: v2
-description: A Helm chart for Kubernetes
-icon: https://github.com/ray-project/ray/raw/master/doc/source/images/ray_header_logo.png
+
 name: kuberay-operator
+
+description: A Helm chart for deploying the Kuberay operator on Kubernetes.
+
+version: 1.1.0
+
 type: application
-version: 1.2.2
+
+keywords:
+  - ray
+  - ray operator
+  - distributed computing
+  - data processing
+  - machine learning
+  - deep learning
+  - hyperparameter tuning
+  - reinforcement learning
+  - model serving
+
+home: https://github.com/ray-project/kuberay
+
+icon: https://github.com/ray-project/ray/raw/master/doc/source/images/ray_header_logo.png
