--- a/argo-projects/kube-ray/charts/kuberay-operator/templates/ray_rayjob_editor_role.yaml
+++ b/argo-projects/kube-ray/charts/kuberay-operator/templates/ray_rayjob_editor_role.yaml
@@ -1,28 +1,28 @@
-# permissions for end users to edit rayjobs.
+{{- /* ClusterRole for end users to view and edit RayJob. */ -}}
 {{- if and .Values.rbacEnable (not .Values.singleNamespaceInstall) }}
-
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  labels: {{ include "kuberay-operator.labels" . | nindent 4 }}
   name: rayjob-editor-role
+  labels:
+    {{- include "kuberay-operator.labels" . | nindent 4 }}
 rules:
-- apiGroups:
-  - ray.io
-  resources:
-  - rayjobs
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - ray.io
-  resources:
-  - rayjobs/status
-  verbs:
-  - get
+  - apiGroups:
+      - ray.io
+    resources:
+      - rayjobs
+    verbs:
+      - create
+      - delete
+      - get
+      - list
+      - patch
+      - update
+      - watch
+  - apiGroups:
+      - ray.io
+    resources:
+      - rayjobs/status
+    verbs:
+      - get
 {{- end }}
