--- a/argo-projects/kube-ray/charts/kuberay-operator/templates/ray_rayjob_viewer_role.yaml
+++ b/argo-projects/kube-ray/charts/kuberay-operator/templates/ray_rayjob_viewer_role.yaml
@@ -1,24 +1,24 @@
-# permissions for end users to view rayjobs.
+{{- /* ClusterRole for end users to view RayJob. */ -}}
 {{- if and .Values.rbacEnable (not .Values.singleNamespaceInstall) }}
-
-kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
 metadata:
-  labels: {{ include "kuberay-operator.labels" . | nindent 4 }}
   name: rayjob-viewer-role
+  labels:
+    {{- include "kuberay-operator.labels" . | nindent 4 }}
 rules:
-- apiGroups:
-  - ray.io
-  resources:
-  - rayjobs
-  verbs:
-  - get
-  - list
-  - watch
-- apiGroups:
-  - ray.io
-  resources:
-  - rayjobs/status
-  verbs:
-  - get
+  - apiGroups:
+      - ray.io
+    resources:
+      - rayjobs
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - ray.io
+    resources:
+      - rayjobs/status
+    verbs:
+      - get
 {{- end }}
