--- a/argo-projects/kube-ray/charts/kuberay-operator/templates/ray_rayservice_viewer_role.yaml
+++ b/argo-projects/kube-ray/charts/kuberay-operator/templates/ray_rayservice_viewer_role.yaml
@@ -1,22 +1,24 @@
-# permissions for end users to view rayservices.
+{{- /* ClusterRole for end users to view RayService. */ -}}
 {{- if and .Values.rbacEnable (not .Values.singleNamespaceInstall) }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: rayservice-viewer-role
+  labels:
+    {{- include "kuberay-operator.labels" . | nindent 4 }}
 rules:
-- apiGroups:
-  - ray.io
-  resources:
-  - rayservices
-  verbs:
-  - get
-  - list
-  - watch
-- apiGroups:
-  - ray.io
-  resources:
-  - rayservices/status
-  verbs:
-  - get
+  - apiGroups:
+      - ray.io
+    resources:
+      - rayservices
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - ray.io
+    resources:
+      - rayservices/status
+    verbs:
+      - get
 {{- end }}
