--- a/argo-projects/kube-ray/charts/ray-cluster/ap-values.yaml
+++ b/argo-projects/kube-ray/charts/ray-cluster/ap-values.yaml
@@ -53,6 +53,14 @@ head:
   # rayVersion determines the autoscaler's image version.
   # It should match the Ray version in the image of the containers.
   rayVersion: "2.44.0"
+  # Включить / выключить высокую доступность GCS
+  enableGcsFT: true
+  gcsFT:
+    # externalStorageNamespace: ray-gcs-backup     # можно опустить → будет тот же NS, что и кластера
+    redisAddress: redis:6379                     # адрес Redis‑сервера метаданных
+    redisSecret:
+      name: redis-password-secret
+      key: password
   # If enableInTreeAutoscaling is true, the autoscaler sidecar will be added to the Ray head pod.
   # Ray autoscaler integration is supported only for Ray versions >= 1.11.0
   # Ray autoscaler integration is Beta with KubeRay >= 0.3.0 and Ray >= 2.0.0.
