--- a/ray-serve-vllm/Makefile
+++ b/ray-serve-vllm/Makefile
@@ -1,8 +1,8 @@
 PLATFORM ?= linux/amd64
 ZIP_FILE = serve.zip
-VLLM_VERSION=0.8.4
-RAY_IMAGE_VERSION=2.44.0-py310-cu124
-CONTAINER_VERSION=1.1.7
+VLLM_VERSION=0.10.1.1
+RAY_IMAGE_VERSION=2.49.0.66438d-py312-cu128
+CONTAINER_VERSION=1.2.0
 APP_DOCKER_IMAGE_VERSIONED = gitlab.ap.com:5050/it-operations/k8s-config/vllm-$(VLLM_VERSION)-ray-$(RAY_IMAGE_VERSION)-serve:$(CONTAINER_VERSION)
 
 package-container:
